sample_data/complex-iptables-135
# Generated by iptables-save v1.3.5 on Thu Feb 28 11:52:00 2013
*mangle
:PREROUTING ACCEPT [1242:75017]
:INPUT ACCEPT [1242:75017]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3189:276703]
:POSTROUTING ACCEPT [3189:276703]
-A INPUT -s 1.1.1.1 -p tcp -j ECN --ecn-tcp-remove 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-level 6 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-prefix "foo" 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-tcp-sequence 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-tcp-options 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-ip-options 
-A INPUT -s 1.1.1.1 -p tcp -j LOG --log-uid 
-A INPUT -s 1.1.1.1 -p tcp -j MARK --set-mark 0x2 
COMMIT
# Completed on Thu Feb 28 11:52:00 2013
# Generated by iptables-save v1.3.5 on Thu Feb 28 11:52:00 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21292:2298439]
:RH-Firewall-1-INPUT - [0:0]
:foo - [0:0]
-A INPUT -j RH-Firewall-1-INPUT 
-A INPUT -p tcp 
-A INPUT -p ! tcp 
-A INPUT -s 1.1.1.0/255.255.255.0 
-A INPUT -s ! 1.1.1.0/255.255.255.0 
-A INPUT -s ! 1.1.1.1 
-A INPUT -s 1.1.1.1 
-A INPUT -d 1.1.1.1 
-A INPUT -d 1.1.1.0/255.255.255.0 
-A INPUT -d ! 1.1.1.0/255.255.255.0 
-A INPUT -d ! 1.1.1.1 
-A INPUT -s 1.1.1.1 -g foo 
-A INPUT -s 1.1.1.1 -j foo 
-A INPUT -i eth1 
-A INPUT -i ! eth1 
-A INPUT -f 
-A INPUT ! -f 
-A INPUT -s 1.1.1.1 -d 1.1.1.1 -p tcp -g foo 
-A INPUT -s 1.1.1.1 -d ! 1.1.1.1 -p tcp -g foo 
-A INPUT -s 1.1.1.1 -d ! 1.1.1.1 -i ! eth1:1 -p tcp -g foo 
-A INPUT -s 1.1.1.1 -d ! 1.1.1.1 -i ! eth1 -p tcp -g foo 
-A INPUT -s ! 1.1.1.1 -d 1.1.1.1 -i eth1 -p tcp -j foo 
-A INPUT -s ! 1.1.1.1 -d 1.1.1.1 -i eth1 -p tcp -f -j foo 
-A INPUT -s ! 1.1.1.1 -d 1.1.1.1 -i eth1 -p tcp ! -f -j foo 
-A INPUT -m addrtype --src-type UNSPEC 
-A INPUT -m addrtype --dst-type UNSPEC 
-A INPUT -m addrtype --dst-type UNICAST 
-A INPUT -m addrtype --src-type BROADCAST --dst-type UNICAST 
-A INPUT -m comment --comment "123 foo bar #$#%" 
-A INPUT -m connlimit --connlimit-above 10 --connlimit-mask 32 
-A INPUT -m connlimit ! --connlimit-above 10 --connlimit-mask 32 
-A INPUT -m connlimit ! --connlimit-above 10 --connlimit-mask 1 
-A INPUT -m connmark --mark 0x18/0xc 
-A INPUT -m connmark --mark 0x18 
-A INPUT -m conntrack --ctstate NEW 
-A INPUT -m conntrack --ctproto 1 
-A INPUT -m conntrack --ctorigsrc ! 1.1.1.0/24 
-A INPUT -m conntrack --ctorigsrc 1.1.1.0/24 
-A INPUT -m conntrack --ctorigdst 1.1.1.0/24 
-A INPUT -m conntrack --ctorigdst ! 1.1.1.0/24 
-A INPUT -m conntrack --ctreplsrc 1.1.1.0/24 
-A INPUT -m conntrack --ctreplsrc ! 1.1.1.0/24 
-A INPUT -m conntrack --ctrepldst 1.1.1.0/24 
-A INPUT -m conntrack --ctrepldst ! 1.1.1.0/24 
-A INPUT -m conntrack --ctstatus NONE 
-A INPUT -m conntrack --ctstatus EXPECTED 
-A INPUT -m conntrack --ctexpire 1234 
-A INPUT -m conntrack --ctexpire 1234 
-A INPUT -m dscp --dscp 0x0a 
-A INPUT -m dscp --dscp 0x01 
-A INPUT -m dscp --dscp 0x00 
-A INPUT -p esp -m esp --espspi 1 
-A INPUT -p esp -m esp --espspi 1 
-A INPUT -p esp -m esp --espspi ! 1 
-A INPUT -p esp -m esp --espspi ! 1 
-A INPUT -p dccp -m dccp 
-A INPUT -p dccp -m dccp --sport 100 
-A INPUT -p dccp -m dccp --sport 100:200 
-A INPUT -p dccp -m dccp ! --sport 100:200 
-A INPUT -p dccp -m dccp --dport 100 
-A INPUT -p dccp -m dccp --dport 100:200 
-A INPUT -p dccp -m dccp ! --dport 100:200 
-A INPUT -p dccp -m dccp ! --dport 100 
-A INPUT -p dccp -m dccp --dccp-type REQUEST
-A INPUT -p dccp -m dccp --dccp-type REQUEST,RESPONSE
-A INPUT -p dccp -m dccp --dccp-type ! REQUEST,RESPONSE
-A INPUT -p dccp -m dccp --dccp-option 4 
-A INPUT -p dccp -m dccp --dccp-option 4 
-A INPUT -m helper --helper "foo" 
-A INPUT -p icmp -m icmp --icmp-type 0 
-A INPUT -p icmp -m icmp ! --icmp-type 0 
-A INPUT -m iprange --src-range 1.1.1.1-2.2.2.2 
-A INPUT -m iprange ! --src-range 1.1.1.1-2.2.2.2 
-A INPUT -m iprange --dst-range 1.1.1.1-2.2.2.2 
-A INPUT -m iprange ! --dst-range 1.1.1.1-2.2.2.2 
-A INPUT -m length --length 100 
-A INPUT -m length --length 100:200 
-A INPUT -m length --length ! 100:200 
-A INPUT -m limit --limit 30/sec 
-A INPUT -m limit --limit 30/min 
-A INPUT -m limit --limit 30/min --limit-burst 60 
-A INPUT -m mac --mac-source 00:AA:00:AA:00:AA 
-A INPUT -m mac ! --mac-source 00:AA:00:AA:00:AA 
-A INPUT -m mark --mark 0x4 
-A INPUT -m mark --mark 0x4/0x5 
-A INPUT -p udp -m multiport --sports 45 
-A INPUT -p udp -m multiport --sports ! 45 
-A INPUT -p udp -m multiport --dports 45 
-A INPUT -p udp -m multiport --dports 45:46 
-A INPUT -p udp -m multiport --dports 45:46,68 
-A INPUT -p udp -m multiport --dports ! 45:46,68 
-A INPUT -p udp -m multiport --ports 4,5,6:10 
-A INPUT -p udp -m multiport --ports ! 4,5,6:10 
-A INPUT -p udp -m owner --uid-owner root 
-A INPUT -p udp -m owner --uid-owner root 
-A INPUT -p udp -m owner --gid-owner wheel 
-A INPUT -p udp -m owner --gid-owner wheel 
-A INPUT -p tcp -m physdev  --physdev-in eth0 
-A INPUT -p tcp -m physdev  --physdev-in eth0:1 
-A INPUT -p tcp -m physdev  ! --physdev-in eth0 
-A INPUT -p tcp -m physdev  --physdev-out eth0 
-A INPUT -p tcp -m physdev  --physdev-is-in 
-A INPUT -p tcp -m physdev  ! --physdev-is-in 
-A INPUT -p tcp -m physdev  --physdev-is-out 
-A INPUT -p tcp -m physdev  ! --physdev-is-out 
-A INPUT -p tcp -m physdev  --physdev-is-bridged 
-A INPUT -p tcp -m physdev  ! --physdev-is-bridged 
-A INPUT -p tcp -m pkttype --pkt-type unicast 
-A INPUT -p tcp -m pkttype --pkt-type multicast 
-A INPUT -p tcp -m policy --dir in --pol ipsec 
-A INPUT -p tcp -m policy --dir out --pol ipsec 
-A INPUT -p tcp -m policy --dir in --pol none 
-A INPUT -p tcp -m policy --dir in --pol ipsec --strict --reqid 4 
-A INPUT -p tcp -m policy --dir in --pol ipsec --spi 0x5 
-A INPUT -p tcp -m policy --dir in --pol ipsec --proto ah 
-A INPUT -p tcp -m policy --dir in --pol ipsec --mode transport 
-A INPUT -p tcp -m policy --dir in --pol ipsec --mode tunnel 
-A INPUT -p tcp -m policy --dir in --pol ipsec --mode tunnel --tunnel-src 1.1.1.0/24 
-A INPUT -p tcp -m policy --dir in --pol ipsec --mode tunnel --tunnel-dst 1.1.1.0/24 
-A INPUT -p tcp -m policy --dir in --pol ipsec --strict --mode tunnel --next --reqid 5 
-A INPUT -p tcp -m realm --realm 0x7b 
-A INPUT -p tcp -m realm --realm 0x7b/0x22 
-A INPUT -p tcp -m realm ! --realm 0x7b/0x22 
-A INPUT -p tcp -m recent --set --name foo --rsource 
-A INPUT -p tcp -m recent ! --set --name foo --rsource 
-A INPUT -p tcp -m recent --rcheck --name foo --rsource 
-A INPUT -p tcp -m recent ! --rcheck --name foo --rsource 
-A INPUT -p tcp -m recent --update --name foo --rsource 
-A INPUT -p tcp -m recent ! --update --name foo --rsource 
-A INPUT -p tcp -m recent --remove --name foo --rsource 
-A INPUT -p tcp -m recent ! --remove --name foo --rsource 
-A INPUT -p tcp -m recent --update --seconds 500 --name foo --rsource 
-A INPUT -p tcp -m recent --update --rttl --name foo --rsource 
-A INPUT -p sctp -m sctp --sport 12 
-A INPUT -p sctp -m sctp --sport 12:45 
-A INPUT -p sctp -m sctp ! --sport 12:45 
-A INPUT -p sctp -m sctp --dport 34 
-A INPUT -p sctp -m sctp --dport 34:56 
-A INPUT -p sctp -m sctp ! --dport 34:56 
-A INPUT -p sctp -m sctp --chunk-types all DATA 
-A INPUT -p sctp -m sctp ! --chunk-types all DATA 
-A INPUT -p sctp -m sctp ! --chunk-types all DATA:U 
-A INPUT -p sctp -m sctp --chunk-types all DATA:U 
-A INPUT -p tcp -m state --state INVALID 
-A INPUT -p tcp -m state --state INVALID,ESTABLISHED 
-A INPUT -p tcp -m statistic --mode nth --every 1 
-A INPUT -p tcp -m statistic --mode random --probability 1.000000 
-A INPUT -p tcp -m statistic --mode nth --every 56 
-A INPUT -p tcp -m statistic --mode nth --every 56 --packet 4 
-A INPUT -p tcp -m string --string "foo bar baz" --algo bm --to 65535 
-A INPUT -p tcp -m string --string "foo bar baz" --algo bm --from 100 --to 65535 
-A INPUT -p tcp -m string --string "foo bar baz" --algo bm --to 200 
-A INPUT -p tcp -m tcp --sport 123 
-A INPUT -p tcp -m tcp --sport 123:400 
-A INPUT -p tcp -m tcp ! --sport 123:400 
-A INPUT -p tcp -m tcp --dport 123:400 
-A INPUT -p tcp -m tcp ! --dport 123:400 
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK FIN 
-A INPUT -p tcp -m tcp ! --tcp-flags SYN,ACK FIN 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN 
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN 
-A INPUT -p tcp -m tcp ! --tcp-option 4 
-A INPUT -p tcp -m tcp --tcp-option 4 
-A INPUT -p tcp -m tcpmss --mss 1024:2048 
-A INPUT -p tcp -m tcpmss --mss 1024 
-A INPUT -p tcp -m tcpmss --mss ! 1024 
-A INPUT -m tos --tos Maximize-Reliability 
-A INPUT -m ttl --ttl-eq 100 
-A INPUT -m ttl --ttl-gt 100 
-A INPUT -m ttl --ttl-lt 100 
-A INPUT -p udp -m udp --sport 1024 
-A INPUT -p udp -m udp --sport 1024:2049 
-A INPUT -p udp -m udp ! --sport 1024:2049 
-A INPUT -p udp -m udp --dport 1024:2049 
-A INPUT -p udp -m udp ! --dport 1024:2049 
-A INPUT -s 1.1.1.1 -p tcp -j CONNMARK --set-mark 0x1/0x2 
-A INPUT -s 1.1.1.1 -p tcp -j CONNMARK --save-mark --mask 0x17
-A FORWARD -j RH-Firewall-1-INPUT 
-A OUTPUT -o eth1 
-A OUTPUT -o ! eth1 
-A OUTPUT -p tcp -m physdev  --physdev-out eth0 
-A OUTPUT -p tcp -m physdev  ! --physdev-out eth0 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -i eth0 -j ACCEPT 
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A RH-Firewall-1-INPUT -p esp -j ACCEPT 
-A RH-Firewall-1-INPUT -p ah -j ACCEPT 
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Feb 28 11:52:00 2013
